,/gitops/apps/web-frontend/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: web-frontend
  namespace: web

  labels:
    app: web-frontend

spec:
  selector:
    app: web-frontend

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP

  type: ClusterIP
