,/gitops/apps/web-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: web-frontend
  namespace: web

  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx

  rules:
    - host: devsecops.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: web-frontend
                port:
                  number: 80
