,/gitops/apps/web-frontend/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: web-frontend
  namespace: web

spec:
  podSelector:
    matchLabels:
      app: web-frontend

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector: {}

  egress:
    - to:
        - namespaceSelector: {}
